# logiGate_gui

./: CMakeLists.txt  README.md  misc.csh
assets/: control_buttons.png:Zone.Identifier
